# binrepr

./: README.md  pyproject.toml
binrepr/: __init__.py  fixed.py  free.py  iotools.py
